// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationPage should handle empty registration 1`] = `
<body>
  <div>
    <div
      class="ConfirmationPage"
    >
      <h1
        class="ui header"
        data-testid="main-title"
      >
        confirmation.page.title
      </h1>
      <div>
        Total: , reference: 
      </div>
      <h2
        class="ui header"
      >
        confirmation.page.recap.title
      </h2>
      <button
        class="ui green button ConfirmationPage__print"
      >
        confirmation.page.print
      </button>
    </div>
  </div>
</body>
`;

exports[`ConfirmationPage should match the snapshot 1`] = `
<body>
  <div>
    <div
      class="ConfirmationPage"
    >
      <h1
        class="ui header"
        data-testid="main-title"
      >
        confirmation.page.title
      </h1>
      <div>
        Total: 100, reference: TEST-123132
      </div>
      <h2
        class="ui header"
      >
        confirmation.page.recap.title
      </h2>
      <div
        class="ui raised segment OrderRecap"
      >
        <dl
          class="OrderRecap__container"
        >
          <dd
            class="OrderRecap__title"
          >
            register.form.firstName
          </dd>
          <dt
            class="OrderRecap__value"
          >
            foo
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.lastName
          </dd>
          <dt
            class="OrderRecap__value"
          >
            bar
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.club
          </dd>
          <dt
            class="OrderRecap__value"
          >
            GSL
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.address
          </dd>
          <dt
            class="OrderRecap__value"
          >
            <address>
              <div>
                Rue de Lausanne
                 
                5
              </div>
              <div>
                1018
                 
                Lausanne
              </div>
            </address>
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.total
          </dd>
          <dt
            class="OrderRecap__value"
          >
            CHF 
            100
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.breakfast
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.camping
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.dinner
          </dd>
          <dt
            class="OrderRecap__value"
          >
            4
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.picknick
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.sleeping
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.vegetarian
          </dd>
          <dt
            class="OrderRecap__value"
          >
            4
          </dt>
        </dl>
      </div>
      <button
        class="ui green button ConfirmationPage__print"
      >
        confirmation.page.print
      </button>
    </div>
  </div>
</body>
`;
